// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`YoutubeVideo should match init snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <YoutubeVideo
    googleDeveloperKey="googledevkey"
    hasImageProxy={false}
    link="https://www.youtube.com/watch?v=xqCoNej8Zxo"
    metadata={
      Object {
        "images": Array [
          Object {
            "secure_url": "linkForThumbnail",
            "url": "linkForThumbnail",
          },
        ],
        "title": "Youtube title",
      }
    }
    postId="post_id_1"
    show={true}
    youtubeReferrerPolicy={false}
  >
    <div
      className="post__embed-container"
    >
      <div>
        <h4>
          <span
            className="video-type"
          >
            YouTube - 
          </span>
          <span
            className="video-title"
          >
            <ForwardRef
              href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
              location="youtube_video"
            >
              <a
                href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
                location="youtube_video"
                onClick={[Function]}
                rel="noopener noreferrer"
                target="_blank"
              >
                Youtube title
              </a>
            </ForwardRef>
          </span>
        </h4>
        <div
          className="video-div embed-responsive-item"
        >
          <YouTubeThumbnail
            onError={[Function]}
            play={[Function]}
            thumbnailUrl="https://img.youtube.com/vi/xqCoNej8Zxo/maxresdefault.jpg"
            useMaxResThumbnail={true}
            videoTitle="Youtube title"
          >
            <div
              aria-label="Play Youtube title on YouTube"
              className="video-thumbnail__container"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <Connect(Component)
                src="https://img.youtube.com/vi/xqCoNej8Zxo/maxresdefault.jpg"
              >
                <Memo(ExternalImage)
                  dispatch={[Function]}
                  enableSVGs={false}
                  hasImageProxy={false}
                  src="https://img.youtube.com/vi/xqCoNej8Zxo/maxresdefault.jpg"
                >
                  <img
                    alt="Thumbnail for Youtube title on YouTube"
                    className="video-thumbnail"
                    onError={[Function]}
                    src="https://img.youtube.com/vi/xqCoNej8Zxo/maxresdefault.jpg"
                  />
                </Memo(ExternalImage)>
              </Connect(Component)>
              <div
                aria-label="Play video"
                className="play-button"
                role="presentation"
              >
                <i
                  aria-hidden="true"
                  className="icon-play"
                />
              </div>
            </div>
          </YouTubeThumbnail>
        </div>
      </div>
    </div>
  </YoutubeVideo>
</Provider>
`;

exports[`YoutubeVideo should match snapshot for playing state 1`] = `
<div
  className="post__embed-container"
>
  <div>
    <h4>
      <span
        className="video-type"
      >
        YouTube - 
      </span>
      <span
        className="video-title"
      >
        <ForwardRef
          href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
          location="youtube_video"
        >
          Youtube title
        </ForwardRef>
      </span>
    </h4>
    <div
      className="video-div embed-responsive-item"
    >
      <div
        className="video-playing"
      >
        <iframe
          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
          allowFullScreen={true}
          frameBorder="0"
          height="100%"
          sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
          src="https://www.youtube.com/embed/xqCoNej8Zxo?autoplay=1&rel=0&fs=1&enablejsapi=1"
          title="Youtube title"
          width="100%"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`YoutubeVideo should match snapshot for playing state and \`youtubeReferrerPolicy = true\` 1`] = `
<div
  className="post__embed-container"
>
  <div>
    <h4>
      <span
        className="video-type"
      >
        YouTube - 
      </span>
      <span
        className="video-title"
      >
        <ForwardRef
          href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
          location="youtube_video"
        >
          Youtube title
        </ForwardRef>
      </span>
    </h4>
    <div
      className="video-div embed-responsive-item"
    >
      <div
        className="video-playing"
      >
        <iframe
          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
          allowFullScreen={true}
          frameBorder="0"
          height="100%"
          referrerPolicy="origin"
          sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
          src="https://www.youtube.com/embed/xqCoNej8Zxo?autoplay=1&rel=0&fs=1&enablejsapi=1"
          title="Youtube title"
          width="100%"
        />
      </div>
    </div>
  </div>
</div>
`;
